import "FullVersion.proto";
import "DocumentId.proto";
import "Timestamp.proto";
import "Documents/Document.proto";
import "LockMode.proto";
import "ForwardDocumentEvent.proto";
import "DocumentDirection.proto";
import "Events/DiadocMessage-PostApi.proto";
import "CustomDataItem.proto";

package Diadoc.Api.Proto.Docflow;

option java_outer_classname = "DocumentInfoV3Protos";

message DocumentInfoV3
{
	required FullVersion FullVersion = 1;
	required Documents.MessageType MessageType = 2;
	required int32 WorkflowId = 3;
	required DocumentParticipants Participants = 4;
	required DocumentDirection DocumentDirection = 5;
	required string DepartmentId = 6;
	optional string CustomDocumentId = 7;
	repeated Events.MetadataItem Metadata = 8;
	repeated CustomDataItem CustomData = 9;
	required DocumentLinks DocumentLinks = 10;
	required PacketInfo PacketInfo = 11;
	required bool IsRead = 12;
	required bool IsDeleted = 13;
	required bool IsInvitation = 14;
	optional DocumentLetterInfo LetterInfo = 15;
	optional DocumentDraftInfo DraftInfo = 16;
	optional DocumentTemplateInfo TemplateInfo = 17;
	optional Documents.Origin Origin = 18;
	optional string EditingSettingId = 19 [default = ""];
}

message DocumentParticipants
{
	required DocumentParticipant Sender = 1;
	optional DocumentParticipant Proxy = 2;
	optional DocumentParticipant Recipient = 3;
	required bool IsInternal = 4;
}

message DocumentParticipant
{
	required string BoxId = 1;
	optional string DepartmentId = 2;
}

message DocumentLinks
{
	repeated DocumentId InitialIds = 1;
	repeated DocumentId SubordinateIds = 2;
}

message PacketInfo
{
	required LockMode LockMode = 1;
	optional string PacketId = 2;
	optional Timestamp AddedAt = 3;
}

message DocumentLetterInfo
{
	required bool IsEncrypted = 1;
	repeated ForwardDocumentEvent ForwardDocumentEvents = 2;
	required bool IsTest = 3;
}

message DocumentDraftInfo
{
	required bool IsRecycled = 1;
	required bool IsLocked = 2;
	repeated string TransformedToLetterIds = 3;
}

message DocumentTemplateInfo
{
	required DocumentParticipants LetterParticipants = 1;
	repeated string TransformedToLetterIds = 2;
	repeated TemplateTransformationInfo TemplateTransformationInfos = 3;
	optional TemplateRefusalInfo TemplateRefusalInfo = 4;
	optional bool IsReusable = 5 [default = false];
}

message TemplateTransformationInfo
{
	required string TransformationId = 1;
	optional DocumentId TransformedToDocumentId = 2;
	optional string AuthorUserId = 3;
}

message TemplateRefusalInfo
{
	required string BoxId = 1;
	optional string AuthorUserId = 2;
	optional string Comment = 3;
}
